[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assets/Enemys/enemyLady/attack/enemyBombAttack0009.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemys/enemyLady/destroy/enemyBombDestroy0013.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemys/enemyLady/air/enemyBombAir0002.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemys/enemyLady/destroy/enemyBombDestroy0016.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemys/enemyLady/wait/enemyBombWait0001.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemys/enemyLady/load/enemyBombLoad0019.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemys/enemyLady/load/enemyBombLoad0020.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemys/enemyLady/destroy/enemyBombDestroy0012.png" type="Texture" id=8]
[ext_resource path="res://Assets/Enemys/enemyLady/destroy/enemyBombDestroy0014.png" type="Texture" id=9]
[ext_resource path="res://Assets/Enemys/enemyLady/destroy/enemyBombDestroy0018.png" type="Texture" id=10]
[ext_resource path="res://Assets/Enemys/enemyLady/run/enemyBombRun0004.png" type="Texture" id=11]
[ext_resource path="res://Assets/Enemys/enemyLady/attack/enemyBombAttack0005.png" type="Texture" id=12]
[ext_resource path="res://Assets/Enemys/enemyLady/attack/enemyBombAttack0006.png" type="Texture" id=13]
[ext_resource path="res://Assets/Enemys/enemyLady/attack/enemyBombAttack0007.png" type="Texture" id=14]
[ext_resource path="res://Assets/Enemys/enemyLady/run/enemyBombRun0003.png" type="Texture" id=15]
[ext_resource path="res://Assets/Enemys/enemyLady/destroy/enemyBombDestroy0017.png" type="Texture" id=16]
[ext_resource path="res://Assets/Enemys/enemyLady/attack/enemyBombAttack0011.png" type="Texture" id=17]
[ext_resource path="res://Assets/Enemys/enemyLady/attack/enemyBombAttack0008.png" type="Texture" id=18]
[ext_resource path="res://Assets/Enemys/enemyLady/attack/enemyBombAttack0010.png" type="Texture" id=19]
[ext_resource path="res://Assets/Enemys/enemyLady/destroy/enemyBombDestroy0015.png" type="Texture" id=20]
[ext_resource path="res://Assets/Enemys/enemyLady/wait/enemyBombWait0000.png" type="Texture" id=21]
[ext_resource path="res://enemyLady.gd" type="Script" id=22]
[ext_resource path="res://Assets/audio efects/ventilator.ogg" type="AudioStream" id=23]
[ext_resource path="res://Assets/audio efects/destroy.ogg" type="AudioStream" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 1 ), ExtResource( 19 ), ExtResource( 17 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "load",
"speed": 4.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 5 ) ],
"loop": true,
"name": "wait",
"speed": 4.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 20 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 10 ) ],
"loop": true,
"name": "destroy",
"speed": 12.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "air",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 15.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.0634, 5.83192 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.87097, 14.6708 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 4, 4, 1 )
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 8.0
scale_random = 1.0
color = Color( 0.101961, 0.164706, 0.901961, 1 )

[node name="enemyLady" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 10
script = ExtResource( 22 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "wait"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 9.5 )
shape = SubResource( 2 )

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
collision_mask = 8

[node name="visionChecker2" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 250 )

[node name="visionChecker1" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 250 )

[node name="attackChecker2" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 40 )

[node name="attackChecker1" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 40 )

[node name="attackChecker3" type="RayCast2D" parent="."]
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 45 )

[node name="AreaDamage1" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDamage1"]
position = Vector2( -24.7487, 8.48529 )
shape = SubResource( 3 )

[node name="AreaDamage2" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDamage2"]
position = Vector2( 27.9307, 8.48529 )
shape = SubResource( 3 )

[node name="AreaDamage3" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDamage3"]
position = Vector2( 1.06065, -14.4957 )
shape = SubResource( 4 )

[node name="timerCD" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="timerDZ" type="Timer" parent="."]
wait_time = 0.1

[node name="timerAttack" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
amount = 28
explosiveness = 1.0
process_material = SubResource( 5 )

[node name="timerHit" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 23 )
volume_db = -8.565
attenuation = 0.517632

[node name="destroy" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 24 )
volume_db = -17.129
attenuation = 0.482968

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="AreaDamage1" to="." method="_on_AreaDamage1_body_entered"]
[connection signal="body_entered" from="AreaDamage2" to="." method="_on_AreaDamage2_body_entered"]
[connection signal="body_entered" from="AreaDamage3" to="." method="_on_AreaDamage3_body_entered"]
[connection signal="timeout" from="timerCD" to="." method="_on_timerCD_timeout"]
[connection signal="timeout" from="timerDZ" to="." method="_on_timerDZ_timeout"]
[connection signal="timeout" from="timerAttack" to="." method="_on_timerAttack_timeout"]
[connection signal="timeout" from="timerHit" to="." method="_on_timerHit_timeout"]
